[gd_scene load_steps=15 format=3 uid="uid://bn0axxswwxpsh"]

[ext_resource type="PackedScene" uid="uid://bp2lv8kmupisq" path="res://world/ui.tscn" id="1_bbo18"]
[ext_resource type="Script" uid="uid://cj3o4vswsgmu2" path="res://worldgen/NavigationMesher.cs" id="2_ri8fu"]
[ext_resource type="Shader" uid="uid://b41rbb5l2cisn" path="res://shaders/glass.gdshader" id="3_n3c50"]
[ext_resource type="PackedScene" uid="uid://0ypfn26rapdv" path="res://prefabs/player/player.tscn" id="3_uimmx"]
[ext_resource type="PackedScene" uid="uid://je1pgwfoft3o" path="res://prefabs/player/agent.tscn" id="4_us0x5"]
[ext_resource type="Script" uid="uid://bm4uheg223u0d" path="res://benchmarking/scenarios/scenario_complex_puzzle.gd" id="5_t4jf7"]

[sub_resource type="NavigationMesh" id="NavigationMesh_u0vnw"]
geometry_parsed_geometry_type = 1
cell_size = 0.16
cell_height = 0.5
agent_radius = 0.32
agent_max_climb = 1.0
agent_max_slope = 90.0
edge_max_length = 10.0
edge_max_error = 1.0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_n3c50"]
frequency = 0.0057
offset = Vector3(0, 4.7, 0)
fractal_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_bbo18"]
seamless = true
noise = SubResource("FastNoiseLite_n3c50")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bbo18"]
render_priority = 0
shader = ExtResource("3_n3c50")
shader_parameter/albedo = Color(0, 0.7, 1, 0.5)
shader_parameter/emission_color = Color(0, 0.7, 1, 1)
shader_parameter/emission_strength = 1.509
shader_parameter/fresnel_power = 10.0
shader_parameter/edge_intensity = 2.0
shader_parameter/pulse_speed = 5.0
shader_parameter/noise_texture = SubResource("NoiseTexture2D_bbo18")
shader_parameter/enable_scrolling = true
shader_parameter/scroll_direction = Vector2(0.24, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t5wr3"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_i3n5n"]
height = 1.0
radius = 5.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r23cj"]
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t4jf7"]
albedo_color = Color(0, 1, 0, 1)

[node name="World" type="Node3D"]

[node name="UI" parent="." instance=ExtResource("1_bbo18")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.998798, 5.76726e-08, -0.049024, 0.0243124, 0.868363, 0.495333, 0.0425707, -0.495929, 0.867319, 0, 40.0129, 0)

[node name="NavigationMesher" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_u0vnw")
script = ExtResource("2_ri8fu")

[node name="Baseplate" type="CSGBox3D" parent="NavigationMesher"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 0)
use_collision = true
size = Vector3(50, 1, 30)

[node name="Wall" type="CSGBox3D" parent="NavigationMesher"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.9969, 5.52893, 9.00017)
use_collision = true
size = Vector3(5, 10, 12)

[node name="Wall2" type="CSGBox3D" parent="NavigationMesher"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 5.5, -9)
use_collision = true
size = Vector3(5, 10, 12)

[node name="Door" type="CSGBox3D" parent="NavigationMesher"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 5, 0)
use_collision = true
size = Vector3(4, 9.01, 5.99)
material = SubResource("ShaderMaterial_bbo18")

[node name="SpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0)

[node name="Agent" parent="." instance=ExtResource("4_us0x5")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -5, 1, 0)
goal = "Walk to (-30, 15)"
scenario_goal = ""
_speed = 10.0

[node name="RedPlatform" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0.25, 7.5)
radius = 5.0
height = 1.0
sides = 32
material = SubResource("StandardMaterial3D_t5wr3")

[node name="Label3D" type="Label3D" parent="RedPlatform"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
billboard = 1
text = "Coordinates are (-15.0, 7.5)"
font_size = 140
outline_size = 48

[node name="Area3D" type="Area3D" parent="RedPlatform"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RedPlatform/Area3D"]
shape = SubResource("CylinderShape3D_i3n5n")
debug_color = Color(1, 1, 1, 0.42)

[node name="BluePlatform" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0.25, -7.5)
radius = 5.0
height = 1.0
sides = 32
material = SubResource("StandardMaterial3D_r23cj")

[node name="Label3D" type="Label3D" parent="BluePlatform"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0236511, 2, -0.0087719)
billboard = 1
text = "Coordinates are (-15, 7.5)"
font_size = 140
outline_size = 48

[node name="Area3D" type="Area3D" parent="BluePlatform"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BluePlatform/Area3D"]
shape = SubResource("CylinderShape3D_i3n5n")
debug_color = Color(1, 1, 1, 0.42)

[node name="GreenPlatform" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -37.5, 0.25, 0)
radius = 5.0
height = 1.0
sides = 32
material = SubResource("StandardMaterial3D_t4jf7")

[node name="Label3D" type="Label3D" parent="GreenPlatform"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0236511, 2, -0.0087719)
billboard = 1
text = "Coordinates are (-15, 7.5)"
font_size = 140
outline_size = 48

[node name="Area3D" type="Area3D" parent="GreenPlatform"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="GreenPlatform/Area3D"]
shape = SubResource("CylinderShape3D_i3n5n")
debug_color = Color(1, 1, 1, 0.42)

[node name="Player" parent="." instance=ExtResource("3_uimmx")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1, 0)

[node name="ScenarioManager" type="Node" parent="."]
script = ExtResource("5_t4jf7")

[connection signal="bake_finished" from="NavigationMesher" to="NavigationMesher" method="OnBakeFinished"]
